--- a/src/Tempo/Tempo.module.scss
+++ b/src/Tempo/Tempo.module.scss
@@ -1,4 +1,9 @@
 @mixin common-style {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: orange;
     font-size: 60px;
     font-family: "DIN Alternate";
@@ -6,31 +11,35 @@
     -webkit-touch-callout: none;
     -webkit-user-select: none;
 }
-.from .tempoValue,
-.to .tempoValue {
-    position: fixed;
+@media screen and (orientation: portrait) {
+    .from {
+        @include common-style;
+        background: rgb(0, 0, 0);
+        background: -moz-linear-gradient(top, rgb(0, 0, 0) 0%, rgb(40, 40, 40) 100%);
+        background: -webkit-linear-gradient(top, rgb(0, 0, 0) 0%, rgb(40, 40, 40) 100%);
+        background: linear-gradient(to bottom, rgb(0, 0, 0) 0%, rgb(40, 40, 40) 100%);
+    }
+    .to {
+        @include common-style;
+        background: rgb(40, 40, 40);
+        background: -moz-linear-gradient(bottom, rgb(0, 0, 0) 0%, rgb(40, 40, 40) 100%);
+        background: -webkit-linear-gradient(bottom, rgb(0, 0, 0) 0%, rgb(40, 40, 40) 100%);
+        background: linear-gradient(to top, rgb(0, 0, 0) 0%, rgb(40, 40, 40) 100%);
+    }
 }
-.from {
-    @include common-style;
-    width: 100%;
-    height: 50%;
-    background: rgb(0, 0, 0);
-    background: -moz-linear-gradient(top, rgb(0, 0, 0) 0%, rgb(40, 40, 40) 100%);
-    background: -webkit-linear-gradient(top, rgb(0, 0, 0) 0%, rgb(40, 40, 40) 100%);
-    background: linear-gradient(to bottom, rgb(0, 0, 0) 0%, rgb(40, 40, 40) 100%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.to {
-    @include common-style;
-    width: 100%;
-    height: 50%;
-    background: rgb(40, 40, 40);
-    background: -moz-linear-gradient(top, rgb(40, 40, 40) 0%, rgb(0, 0, 0) 100%);
-    background: -webkit-linear-gradient(top, rgb(40, 40, 40) 0%, rgb(0, 0, 0) 100%);
-    background: linear-gradient(to bottom, rgb(40, 40, 40) 0%, rgb(0, 0, 0) 100%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+@media screen and (orientation: landscape) {
+    .from {
+        @include common-style;
+        background: rgb(0, 0, 0);
+        background: -moz-linear-gradient(left, rgb(0, 0, 0) 0%, rgb(40, 40, 40) 100%);
+        background: -webkit-linear-gradient(left, rgb(0, 0, 0) 0%, rgb(40, 40, 40) 100%);
+        background: linear-gradient(to right, rgb(0, 0, 0) 0%, rgb(40, 40, 40) 100%);
+    }
+    .to {
+        @include common-style;
+        background: rgb(40, 40, 40);
+        background: -moz-linear-gradient(right, rgb(0, 0, 0) 0%, rgb(40, 40, 40) 100%);
+        background: -webkit-linear-gradient(right, rgb(0, 0, 0) 0%, rgb(40, 40, 40) 100%);
+        background: linear-gradient(to left, rgb(0, 0, 0) 0%, rgb(40, 40, 40) 100%);
+    }
 }
